make sure we really want to spend $$ before we spend $$

--- a/.env
+++ b/.env
@@ -11,3 +11,4 @@ G5_AUTH_USERNAME=
 G5_AUTH_PASSWORD=
 G5_AUTH_ALLOW_PASSWORD_CREDENTIALS=true
 G5_CLIENT_ID=https://g5-hub.herokuapp.com/clients/[CLIENT_URN]
+TWILIO_SPEND_APPROVED=false
