--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,8 @@ default: &default
   encoding: unicode
   pool: 5
   timeout: 5000
+  user: mattbohme
+  host: localhost
 
 development:
   <<: *default
