--- a/.env
+++ b/.env
@@ -5,10 +5,9 @@ FURY_AUTH=
 DEVISE_SECRET_KEY=
 G5_AUTH_CLIENT_ID=
 G5_AUTH_CLIENT_SECRET=
-G5_AUTH_REDIRECT_URI=http://localhost:3000/g5_auth/users/auth/g5/callback
-G5_AUTH_ENDPOINT=https://dev-auth.g5search.com
+G5_AUTH_REDIRECT_URI=http://localhost:5885/g5_auth/users/auth/g5/callback
+G5_AUTH_ENDPOINT=https://auth.g5search.com
 G5_AUTH_USERNAME=
 G5_AUTH_PASSWORD=
 G5_AUTH_ALLOW_PASSWORD_CREDENTIALS=true
-G5_CLIENT_ID=https://g5-hub.herokuapp.com/clients/[CLIENT_URN]
 TWILIO_SPEND_APPROVED=false
